finalizado estilos gerais

--- a/index.html
+++ b/index.html
@@ -40,15 +40,45 @@
 			<h2>vem ver isso em <span>prática</span></h2>
 			<a href="#projects"><img src="./assets/arrow-down.svg" alt="" /></a>
 		</div>
-    <section id="projects">
-      <div class="project poster-art">
-        <img src="./assets/poster-arte.png" alt="Poster art">
-        <a href="/">Poster Art</a>
-      </div>
-      <div class="project packaging-design">
-        <img src="./assets/embalagem-arte.png" alt="Packaging Design">
-        <a href="/">Poster Art</a>
-      </div>
-    </section>
+		<section id="projects">
+			<div class="project poster-art">
+				<img src="./assets/poster-arte.png" alt="Poster art" />
+				<a href="https://www.behance.net/gallery/163775207/Poster-Design-Janeiro-2023" target="_blank">Poster Art</a>
+			</div>
+			<div class="project packaging-design">
+				<img src="./assets/embalagem-arte.png" alt="Packaging Design" />
+				<a href="https://www.behance.net/gallery/152009699/DIVAZ-Energy-Drink" target="_blank">Design de Embalagem</a>
+			</div>
+			<div class="project ux-ui">
+				<img src="./assets/ux-ui.png" alt="UX/UI Design" />
+				<a href="https://www.behance.net/gallery/142367437/OQTEM-UXUI" target="_blank">UX/UI Design</a>
+			</div>
+			<div class="project social-media">
+				<img src="./assets/social-media.png" alt="Social Media" />
+				<a href="https://www.behance.net/gallery/162822241/Social-Media-Pausa-no-Plantao" target="_blank">Social Media</a>
+			</div>
+			<div class="project print-design">
+				<img src="./assets/estampa.png" alt="Print Design" />
+				<a href="https://www.behance.net/gallery/124699525/Projeto-de-estampa-de-T-Shirt" target="_blank">Design de Estampa</a>
+			</div>
+			<div class="project three-d-modeling">
+				<img src="./assets/modelagem-3d.png" alt="3D Modeling" />
+				<a href="https://www.behance.net/gallery/138783023/Autorretrato-em-modelagem-3D" target="_blank">Modelagem 3D</a>
+			</div>
+		</section>
+		<footer>
+			<a href="https://www.linkedin.com/in/thayna-dias/" target="_blank">
+				<img src="./assets/blue-star.png" alt="Blue star">
+				<span>linkedin</span>
+			</a>
+			<a href="https://www.behance.net/thaynadias" target="_blank">
+				<img src="./assets/circle.svg" alt="Yellow circle">
+				<span>behance</span>
+			</a>
+			<a href="https://www.instagram.com/graphycna/" target="_blank">
+				<img src="./assets/square.svg" alt="Black rounded square">
+				<span>instagram</span>
+			</a>
+		</footer>
 	</body>
 </html>
