finaliza versão desktop

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 
 		<title>thayná dias - meu portfólio :)</title>
 		<link rel="shortcut icon" href="./assets/star.svg" type="image/x-icon" />
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="./styles/styles.css" />
 	</head>
 	<body>
 		<section id="presentation">
-			<img
-				src="./assets/thay.png"
-				alt="Imagem de um computador antigo, de cor azul. Na tela dele, uma foto de Thayná Dias" />
+			<div class="images">
+				<img src="./assets/star.svg" alt="Yellow star" id="computer-star">
+				<img
+					src="./assets/thay.png"
+					alt="Imagem de um computador antigo, de cor azul. Na tela dele, uma foto de Thayná Dias" id="computer"/>
+			</div>
 			<div class="text">
+				<img src="./assets/star.svg" alt="Yellow star">
 				<h1>
 					designer <span>visual</span> <br />
 					& <span>criativa</span>
