adiciona meta-tags description e keywords

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Thayná Dias. Formada em Design Gráfico, com vasto conhecimento em arte, moda e diferentes vertentes do design." />
+		<meta
+			name="keywords"
+			content="portfolio, design, ux/ui design, designer, graphic design" />
+
+		<!-- fonts -->
+
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&family=DM+Serif+Text:ital@0;1&display=swap"
 			rel="stylesheet" />
+
+		<!-- title & styles -->
 
 		<title>thayná dias - meu portfólio :)</title>
 		<link rel="shortcut icon" href="./assets/star.svg" type="image/x-icon" />
@@ -17,19 +28,20 @@
 	<body>
 		<section id="presentation">
 			<div class="images">
-				<img src="./assets/star.svg" alt="Yellow star" id="computer-star">
+				<img src="./assets/star.svg" alt="Yellow star" id="computer-star" />
 				<img
 					src="./assets/thay.png"
-					alt="Imagem de um computador antigo, de cor azul. Na tela dele, uma foto de Thayná Dias" id="computer"/>
+					alt="Imagem de um computador antigo, de cor azul. Na tela dele, uma foto de Thayná Dias"
+					id="computer" />
 			</div>
 			<div class="text">
-				<img src="./assets/star.svg" alt="Yellow star">
+				<img src="./assets/star.svg" alt="Yellow star" />
 				<h1>
 					designer <span>visual</span> <br />
 					& <span>criativa</span>
 				</h1>
 				<p>
-					formada em design gráfico com vasto conhecimento em arte, moda,
+					formada em design gráfico, com vasto conhecimento em arte, moda,
 					diferentes vertentes do design, marketing, composição de ações
 					alinhadas com as particularidades da empresa, identificação de
 					tendências, acompanhamento de performance nas redes sociais e criação
@@ -47,40 +59,64 @@
 		<section id="projects">
 			<div class="project poster-art">
 				<img src="./assets/poster-arte.png" alt="Poster art" />
-				<a href="https://www.behance.net/gallery/163775207/Poster-Design-Janeiro-2023" target="_blank">Poster Art</a>
+				<a
+					href="https://www.behance.net/gallery/163775207/Poster-Design-Janeiro-2023"
+					target="_blank"
+					>Poster Art</a
+				>
 			</div>
 			<div class="project packaging-design">
 				<img src="./assets/embalagem-arte.png" alt="Packaging Design" />
-				<a href="https://www.behance.net/gallery/152009699/DIVAZ-Energy-Drink" target="_blank">Design de Embalagem</a>
+				<a
+					href="https://www.behance.net/gallery/152009699/DIVAZ-Energy-Drink"
+					target="_blank"
+					>Design de Embalagem</a
+				>
 			</div>
 			<div class="project ux-ui">
 				<img src="./assets/ux-ui.png" alt="UX/UI Design" />
-				<a href="https://www.behance.net/gallery/142367437/OQTEM-UXUI" target="_blank">UX/UI Design</a>
+				<a
+					href="https://www.behance.net/gallery/142367437/OQTEM-UXUI"
+					target="_blank"
+					>UX/UI Design</a
+				>
 			</div>
 			<div class="project social-media">
 				<img src="./assets/social-media.png" alt="Social Media" />
-				<a href="https://www.behance.net/gallery/162822241/Social-Media-Pausa-no-Plantao" target="_blank">Social Media</a>
+				<a
+					href="https://www.behance.net/gallery/162822241/Social-Media-Pausa-no-Plantao"
+					target="_blank"
+					>Social Media</a
+				>
 			</div>
 			<div class="project print-design">
 				<img src="./assets/estampa.png" alt="Print Design" />
-				<a href="https://www.behance.net/gallery/124699525/Projeto-de-estampa-de-T-Shirt" target="_blank">Design de Estampa</a>
+				<a
+					href="https://www.behance.net/gallery/124699525/Projeto-de-estampa-de-T-Shirt"
+					target="_blank"
+					>Design de Estampa</a
+				>
 			</div>
 			<div class="project three-d-modeling">
 				<img src="./assets/modelagem-3d.png" alt="3D Modeling" />
-				<a href="https://www.behance.net/gallery/138783023/Autorretrato-em-modelagem-3D" target="_blank">Modelagem 3D</a>
+				<a
+					href="https://www.behance.net/gallery/138783023/Autorretrato-em-modelagem-3D"
+					target="_blank"
+					>Modelagem 3D</a
+				>
 			</div>
 		</section>
 		<footer>
 			<a href="https://www.linkedin.com/in/thayna-dias/" target="_blank">
-				<img src="./assets/blue-star.png" alt="Blue star">
+				<img src="./assets/blue-star.png" alt="Blue star" />
 				<span>linkedin</span>
 			</a>
 			<a href="https://www.behance.net/thaynadias" target="_blank">
-				<img src="./assets/circle.svg" alt="Yellow circle">
+				<img src="./assets/circle.svg" alt="Yellow circle" />
 				<span>behance</span>
 			</a>
 			<a href="https://www.instagram.com/graphycna/" target="_blank">
-				<img src="./assets/square.svg" alt="Black rounded square">
+				<img src="./assets/square.svg" alt="Black rounded square" />
 				<span>instagram</span>
 			</a>
 		</footer>
