--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<title>thayná dias - meu portfólio :)</title>
 		<link rel="shortcut icon" href="./assets/star.svg" type="image/x-icon" />
-		<link rel="stylesheet" href="./styles/styles.css" />
+		<link rel="stylesheet" href="./styles/main.css" />
 	</head>
 	<body>
 		<section id="presentation">
