remove link projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</section>
 		<div class="cta">
 			<h2>vem ver isso em <span>prática</span></h2>
-			<a href="#projects"><img src="./assets/arrow-down.svg" alt="" /></a>
+			<img src="./assets/arrow-down.svg" alt="arrow-down" />
 		</div>
 		<section id="projects">
 			<div class="project poster-art">
